# optree

./: .clang-format  .clang-tidy  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  MANIFEST.in  Makefile  README.md  benchmark.py  conda-recipe.yaml  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  feature-request.yml  questions.yml  questions_help_support.md
.github/workflows/: build.yml  lint.yml  set_cibw_build.py  set_release.py  set_setup_requires.py  tests-with-pydebug.yml  tests.yml
docs/: conda-recipe.yaml  requirements.txt
docs/source/: api.rst  conf.py  dataclasses.rst  functools.rst  index.rst  integration.rst  integrations.rst  ops.rst  pytree.rst  registry.rst  spelling_wordlist.txt  treespec.rst  typing.rst
docs/source/_static/: style.css
include/: critical_section.h  exceptions.h  hashing.h  mutex.h  pymacros.h  pytypes.h  registry.h  stdutils.h  synchronization.h  treedef.h  treespec.h  utils.h
include/optree/: exceptions.h  hashing.h  optree.h  pymacros.h  pytypes.h  registry.h  stdutils.h  synchronization.h  treespec.h
optree/: _C.pyi  __init__.py  _optree.pyi  accessor.py  accessors.py  dataclasses.py  functools.py  ops.py  pytree.py  registry.py  tree.py  treespec.py  typing.py  utils.py  version.py
optree/integration/: __init__.py  jax.py  numpy.py  torch.py
optree/integrations/: __init__.py  attrs.py  jax.py  numpy.py  torch.py
src/: CMakeLists.txt  optree.cpp  registry.cpp  treedef.cpp  utils.cpp
src/treespec/: constructor.cpp  constructors.cpp  flatten.cpp  gc.cpp  hashing.cpp  richcomparison.cpp  serialization.cpp  traversal.cpp  treespec.cpp  unflatten.cpp
tests/: .coveragerc  confcoverage.py  conftest.py  helpers.py  requirements.txt  test_accessor.py  test_accessors.py  test_concurrent.py  test_dataclasses.py  test_functools.py  test_ops.py  test_optree.py  test_prefix_errors.py  test_registry.py  test_shortcut.py  test_treespec.py  test_typing.py  test_utils.py
tests/concurrent/: test_subinterpreters.py  test_threading.py
tests/integration/: test_imports.py  test_jax.py  test_numpy.py  test_torch.py
tests/integrations/: test_attrs.py  test_imports.py  test_jax.py  test_numpy.py  test_torch.py
