# Package ######################################################################

[build-system]
requires = ["setuptools", "cmake >= 3.18", "pybind11 >= 2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "optree"
description = "Optimized PyTree Utilities."
readme = "README.md"
requires-python = ">= 3.7"
authors = [
    { name = "OpTree Contributors" },
    { name = "Xuehai Pan", email = "XuehaiPan@pku.edu.cn" },
    { name = "Jie Ren", email = "jieren9806@gmail.com" },
]
license = { text = "Apache License, Version 2.0" }
keywords = [
    "PyTree",
    "Tree Manipulation",
    "Tree Traversal",
    "Functional Programming",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Utilities",
]
dependencies = ["typing-extensions >= 4.5.0"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/metaopt/optree"
Repository = "https://github.com/metaopt/optree"
Documentation = "https://optree.readthedocs.io"
"Bug Report" = "https://github.com/metaopt/optree/issues"

[project.optional-dependencies]
jax = ["jax"]
numpy = ["numpy"]
torch = ["torch"]
lint = [
    "isort",
    "black",
    "pylint[spelling]",
    "mypy",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-pyi",
    "flake8-simplify",
    "ruff",
    "doc8",
    "pydocstyle",
    "pyenchant",
    "xdoctest",
    "cpplint",
    "pre-commit",
]
test = ["pytest", "pytest-cov", "pytest-xdist"]
docs = [
    "sphinx",
    "sphinx-autoapi",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "sphinxcontrib-bibtex",
    "sphinx-autodoc-typehints",
    "docutils",
    "jax[cpu]",
    "numpy",
    "torch",
]
benchmark = [
    "jax[cpu] >= 0.4.6, < 0.5.0a0",
    "torch >= 2.0, < 2.4.0a0",
    "torchvision",
    "dm-tree >= 0.1, < 0.2.0a0",
    "pandas",
    "tabulate",
    "termcolor",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["optree", "optree.*"]

[tool.setuptools.package-data]
optree = ['*.so', '*.pyd']

# Wheel builder ################################################################
# Reference: https://cibuildwheel.readthedocs.io
[tool.cibuildwheel]
archs = ["native"]
free-threaded-support = true
skip = "*musllinux*"
build-frontend = "build"
test-extras = ["test"]
test-command = '''make -C "{project}" test PYTHON=python PYTESTOPTS="--quiet --exitfirst --no-showlocals"'''

# Linter tools #################################################################

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py37"]

[tool.isort]
atomic = true
profile = "black"
src_paths = ["optree", "tests"]
extra_standard_library = ["typing_extensions"]
indent = 4
line_length = 100
lines_after_imports = 2
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
exclude = ["^setup\\.py$", "^tests/.*\\.py$"]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
no_site_packages = true

[tool.pylint]
main.py-version = "3.7"
main.extension-pkg-allow-list = ["optree._C"]
main.ignore-paths = ["^_C/$", "^tests/$"]
basic.good-names = []
design.max-args = 7
format.max-line-length = 120
"messages control".disable = ["duplicate-code"]
"messages control".enable = ["c-extension-no-member"]
spelling.spelling-dict = "en_US"
spelling.spelling-private-dict-file = "docs/source/spelling_wordlist.txt"
typecheck.generated-members = ["numpy.*", "torch.*"]

[tool.pydocstyle]
convention = "google"

[tool.doc8]
max-line-length = 500

[tool.codespell]
ignore-words = "docs/source/spelling_wordlist.txt"

[tool.ruff]
target-version = "py37"
line-length = 100
output-format = "full"
src = ["optree", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "C90",     # mccabe
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "ANN",     # flake8-annotations
    "S",       # flake8-bandit
    "BLE",     # flake8-blind-except
    "B",       # flake8-bugbear
    "COM",     # flake8-commas
    "C4",      # flake8-comprehensions
    "EXE",     # flake8-executable
    "FA",      # flake8-future-annotations
    "LOG",     # flake8-logging
    "ISC",     # flake8-implicit-str-concat
    "INP",     # flake8-no-pep420
    "PIE",     # flake8-pie
    "PYI",     # flake8-pyi
    "Q",       # flake8-quotes
    "RSE",     # flake8-raise
    "RET",     # flake8-return
    "SIM",     # flake8-simplify
    "TID",     # flake8-tidy-imports
    "TCH",     # flake8-type-checking
    "PERF",    # perflint
    "FURB",    # refurb
    "TRY",     # tryceratops
    "RUF",     # ruff
]
ignore = [
    # E501: line too long
    # W505: doc line too long
    # too long docstring due to long example blocks
    "E501",
    "W505",
    # ANN101: missing type annotation for `self` in method
    # ANN102: missing type annotation for `cls` in classmethod
    "ANN101",
    "ANN102",
    # ANN401: dynamically typed expressions (typing.Any) are disallowed
    "ANN401",
    # N999: invalid module name
    # optree._C is not snake_cased
    "N999",
    # S101: use of `assert` detected
    # internal use and may never raise at runtime
    "S101",
    # TRY003: avoid specifying long messages outside the exception class
    # long messages are necessary for clarity
    "TRY003",
]
typing-modules = ["optree.typing"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # unused-import
]
"optree/typing.py" = [
    "E402",    # module-import-not-at-top-of-file
    "F722",    # forward-annotation-syntax-error
    "F811",    # redefined-while-unused
]
"setup.py" = [
    "ANN",     # flake8-annotations
]
"tests/**/*.py" = [
    "ANN",     # flake8-annotations
    "S",       # flake8-bandit
    "BLE",     # flake8-blind-except
    "SIM",     # flake8-simplify
    "INP001",  # flake8-no-pep420
    "E402",    # module-import-not-at-top-of-file
]
"docs/source/conf.py" = [
    "ANN",     # flake8-annotations
    "INP001",  # flake8-no-pep420
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
verbosity_assertions = 3
filterwarnings = [
    "error",
    "always",
    "ignore:The class `optree.Partial` is deprecated and will be removed in a future version. Please use `optree.functools.partial` instead.:FutureWarning",
    "ignore:The key path API is deprecated and will be removed in a future version. Please use the accessor API instead.:FutureWarning",
]
